--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
 		<org.springframework.version>4.0.6.RELEASE</org.springframework.version>
 		<jersey.version>2.5</jersey.version>
 		<hibernate.version>4.3.6.Final</hibernate.version>
-		<junit.version>3.8.1</junit.version>
+		<junit.version>4.11</junit.version>
+		<log4j.version>1.2.17</log4j.version>
 		<user.module.version>1.0</user.module.version>
 
 	</properties>
@@ -23,6 +24,7 @@
 		<module>userserviceapi</module>
 		<module>userserviceimpl</module>
 		<module>userserviceweb</module>
+		<module>userservicetest</module>
 	</modules>
 
 	<dependencyManagement>
@@ -244,6 +246,11 @@
 				<groupId>com.doshin.service</groupId>
 				<artifactId>userserviceimpl</artifactId>
 				<version>${user.module.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>${log4j.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
