--- a/userdao/src/main/resources/application.properties
+++ b/userdao/src/main/resources/application.properties
@@ -5,3 +5,4 @@ jdbc.password=postgres
 hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql = true
 hibernate.format_sql = false
+hibernate.default_schema = public
