--- a/userservicetest/pom.xml
+++ b/userservicetest/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.doshin.service</groupId>
 	<artifactId>userservicetest</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>userservicetest</name>
 	<url>http://maven.apache.org</url>
 	<properties>
