--- a/userserviceweb/src/main/webapp/WEB-INF/web.xml
+++ b/userserviceweb/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,7 @@
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>com.doshin.service.user.impl</param-value>
+			<param-value>com.doshin.service.filter;com.doshin.service.user.impl</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
